# starcry

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-ubuntu1804  Dockerfile-ubuntu2004  Makefile  README.md  Tiltfile  allegro5.cfg  build_docker_centos7.sh  build_docker_ubuntu1510.sh  build_docker_ubuntu1604.sh  build_docker_ubuntu1710.sh  build_docker_ubuntu1804.sh  build_with_docker.sh  codebrowser.sh  crtmpserver.lua  make.sh  package-lock.json  package.json  prepare_centos7.sh  prepare_linux.sh  prepare_ubuntu15.sh  prepare_ubuntu15_2.sh  remote.sh  servers.txt  test.js  testx.sh  v8-include.txt  vivid_1.1.1_amd64.deb  webpack-dev.config.js  webpack.config.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: FindAllegro5.cmake  FindAllegro5static.cmake  FindCAF.cmake  FindFFMPEG.cmake  FindV8.cmake  StarcryIncludes.cmake  StarcryLinking.cmake  gtestmockscript.cmake  warnings.cmake
deprecated/: render_window.cpp  renderer.cpp  stdin_reader.cpp  streamer.cpp
deprecated/actors/: job_generator.h  renderer.h
deprecated/streamer_output/: ffmpeg_encode.cpp  ffmpeg_encode.h  ffmpeg_stream.cpp
deprecated/util/: actor_info.hpp
docker/: build_CentOS7.sh  build_Ubuntu15.10.sh  build_Ubuntu16.04.sh  build_Ubuntu17.10.sh  build_Ubuntu18.04.sh
docker/CentOS7/: Dockerfile
docker/Ubuntu15.10/: Dockerfile
docker/Ubuntu16.04/: Dockerfile
docker/Ubuntu17.10/: Dockerfile
docker/Ubuntu18.04/: Dockerfile
docs/: Dockerfile  Doxyfile  Makefile  README_deprecated.md  TODO  async_notes.txt  benchmark.sh  breathe.txt  caf_client.cpp  caf_hello_world.cpp  caf_server.cpp  check_script_renderings.sh  clang-tidy.sh  cli_usage.rst  conf.py  developer_manual.rst  docker.md  entrypoint.sh  features.txt  gdb.py  getting_started.rst  index.rst  install_client_deps.sh  install_deps.sh  install_dockerize_deps.sh  install_runtime_deps.sh  integration_test.sh  integration_test_gen_report.py  jaeger.sh  javascript_api.rst  parse_benchmark_results_in_output.py  prepare.sh  starcry-dev-wrapper.sh  sync_docs.sh  tech_doc.md  test_ellipse.html  update_version.sh  v8pp_hello_world.cpp  web_ui.rst
docs/deprecated/: README  caf_hello_world_2.cpp  javascript_api.rst  prepare.sh  sync_docs.sh  v8_hello_world.cpp  worker_only_example.cpp
docs/examples/: ex1.js  hello_world.js  hello_world2.js
docs/source/: api.rst  conf.py  index.rst
examples/strace_hadoop/: get.sh  inspect.sh  strace2.sh  test.js
examples/tcpdump_hadoop/: README.md  inspect.sh  tcpdump2.sh
include/: announce.h  atom_types.h  bitmap_wrapper.hpp  color_blender.hpp  common.h  draw_logic.hpp  generator.h  generator_v2.h  image.hpp  job_cache.h  job_generator.h  job_storage.h  messages.hpp  output_action.hpp  primitives.h  primitives_v8.h  render_client.h  render_server.h  render_threads.h  renderer.h  renderer_v2.h  rendering_engine.hpp  rendering_engine_wrapper.h  scalesettings.h  scenesettings.h  scripting.h  scripting_v2.h  starcry.h  starcry_interactive.h  starcry_pipeline.h  streamer.h  v8_wrapper.h  v8_wrapper.hpp  v8_wrapper_functions.hpp  webserver.h
include/actors/: job_generator.h  job_storage.h  render_window.h  renderer.h  stdin_reader.h  streamer.h
include/data/: color.hpp  gradient.hpp  job.hpp  pixels.hpp  settings.hpp  shape.hpp  texture.hpp
include/deprecated/: scripting.h
include/ffmpeg/: h264_encode.h
include/fonts/: monaco.h
include/network/: render_client.h  render_server.h
include/shapes/: circle.h  circle_v2.h  position.h  rectangle_v2.h
include/starcry/: client_message_handler.h  command_get_bitmap.h  command_get_image.h  command_get_video.h  command_handler.h  metrics.h
include/streamer_output/: allegro5_window.h  ffmpeg_encode.h  ffmpeg_stream.h  ffmpeg_stream_hls.h  sfml_window.h
include/util/: a.hpp  actor_info.hpp  allegro5_window.h  assistant.h  compress_vector.h  fps_progress.hpp  frame_stepper.hpp  generator.h  image_splitter.hpp  limited_executor.hpp  math.h  memory_font.h  progress_visualizer.h  quadtree.h  remote_actors.h  (+8 more)
input/: .clang-format  alpha.js  angletest.js  blank.js  blending_modes.js  blending_modes_array.js  blending_types.js  bluecircles2.js  bluelines.js  blur.js  blur2.js  bright.js  clock.js  collision.js  colortest.js  connect.js  console.js  contrast.js  crashes.js  debug.js  debug2.js  demo.js  destroy-crash.js  destroy-no-crash.js  dex.js  dithering.js  dupes.js  ellipse.js  ellipses.js  fixangle.js  frames.js  greenlines.js  greenlines2.js  greenlines3.js  grid.js  hdr.js  hdr2.js  js_test.js  kaleidoscope-script.js  kaleidoscope.js  (+67 more)
kube/: README.md  cert.yaml  starcry-dev.yaml  starcry-job.yaml  starcry.yaml
libs/: build_deps.cmake
scripts/: prepare_dependencies.sh  test.sh  test_remote.sh  test_single.sh
src/: announce.cpp  bitmap_wrapper.hpp  client.cpp  color_blender.hpp  draw_logic.hpp  generator.cpp  generator.h  generator_v2.cpp  gui_window.cpp  gui_window.h  image.hpp  job_cache.cpp  job_generator.cpp  job_storage.cpp  main.cpp  messages.hpp  native_generator.cpp  native_generator.h  primitives.cpp  render_client.cpp  render_server.cpp  render_threads.cpp  render_window.cpp  renderer.cpp  renderer_v2.cpp  rendering_engine.cpp  rendering_engine.h  rendering_engine.hpp  rendering_engine_wrapper.cpp  rendering_engine_wrapper.h  scalesettings.cpp  scalesettings.h  scenesettings.cpp  scenesettings.h  scripting.cpp  scripting.h  scripting_v2.cpp  sfml_window.cpp  sfml_window.h  starcry.cpp  (+9 more)
test/: color_test.cpp  gradient_test.cpp  imagesplitter_test.cpp  main.cpp  report.py  system_under_test.hpp  test.cpp  test_integration.cpp  test_integration_tests.cpp  test_starcry.cpp  test_unit.cpp  v8_wrapper_test.cpp
web/: .prettierrc  package-lock.json  package.json  quasar.config.js  webpack-dev.config.js  webpack.config.js
web2/: README.md  package-lock.json  package.json  quasar.config.js
webroot/: client.html  client.js  client.wasm  gradients.html  index.html  main.js  sdl.html  sdl2.html  sdl3.html  test_vue.html
websrc/: App.vue  index.js
(+377 files in other folders)
